deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ds-number-service-deployment
  labels:
    app: ds-number-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ds-number-service
  template:
    metadata:
      labels:
        app: ds-number-service
    spec:
      containers:
      - name: ds-number-service
        image: agney/ds-number-service:latest
        ports:
        - containerPort: 8080
