service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
