ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ds-number-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: haproxy
  rules:
  - host: chernyshev.hse.dc        
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ds-number-service-service
            port:
              number: 8080
